# fastEmbedR

./: .Rbuildignore  .gitignore  BENCHMARK_PYTHON.md  BENCHMARK_SUMMARY.md  DESCRIPTION  LICENSE  LICENSE-IMPLICATIONS.md  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  configure  cran-comments.md  pyproject.toml  requirements-benchmark.txt
R/: RcppExports.R  auto_tune.R  backend_info.R  benchmark.R  embed.R  embed_knn.R  evaluate_embedding.R  faissR_bridge.R  fashion_mnist.R  fastEmbedR-package.R  fast_knn_tsne.R  fast_knn_umap.R  gpu_transfer.R  graph.R  knn_input.R  knn_objectives.R  landmark_knn_umap.R  metrics.R  nn.R  public_datasets.R  transform_embedding.R  transform_tsne.R  umap.R  utils.R
benchmark/: accuracy_first_summary.csv  r_reference_smoke.csv  run_targeted_accuracy_sweep.R
docs/: README.md  algorithm-provenance.md  backend-capabilities.md  benchmark-gallery.md  benchmarks.md  examples.md  extended-benchmark-suite.md  fft-library-evaluation.md  function-implementation-details.md  implementation-inventory.md  implementation.md  installation-backends.md  installation.md  metal-fft-roadmap.md  references.md  usage-api.md
examples/: run_cpu_benchmark.R  run_cuda_benchmark.R  run_landmark_modes.R  run_metal_benchmark.R  run_rocm_benchmark.R
inst/: ALGORITHMIC_REFERENCES.md  NOTICE
man/: backend_info.Rd  benchmark_embed.Rd  benchmark_embedding_datasets.Rd  benchmark_knn_umap.Rd  benchmark_metref.Rd  benchmark_singlecell.Rd  cuda_available.Rd  cuvs_available.Rd  embed.Rd  embed_knn.Rd  evaluate_embedding.Rd  faissR_wrappers.Rd  fashion_mnist.Rd  (+23 more)
(+155 files in other folders)
