[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimred-bench"
version = "0.1.0"
description = "Reproducible public-data benchmark suite for UMAP and t-SNE implementations"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "scikit-learn",
]

[project.optional-dependencies]
umap = ["umap-learn"]
tsne = ["openTSNE"]
medmnist = ["medmnist"]
dev = ["pytest"]
all = ["umap-learn", "openTSNE", "medmnist", "pytest"]

[project.scripts]
dimred-bench = "dimred_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
